[package]
name = "novablock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
rand = { version = "0.7", features = ["std"] }
ed25519-dalek = { version = "1.0.1", features = ["rand_core"] }
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"











