[package]
name = "novablock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
warp = "0.3"
ed25519-dalek = { version = "1.0", features = ["rand"] }
rand = "0.7"
hex = "0.4"
sha2 = "0.9"
tokio-tungstenite = "0.21"
futures = "0.3"






