[package]
name = "novablock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rand = { version = "0.7", features = ["std"] }
sha2 = "0.9"
base64 = "0.21"
hex = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
